k8s/app-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp-green
  labels:
    app: springapp-green
  namespace: thanhnc85
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springapp-green
  template:
    metadata:
      labels:
        app: springapp-green
    spec:
      serviceAccount: springapp-mysql
      containers:
      - name: springapp-green
        image: thanhregistry.azurecr.io/springapp
        imagePullPolicy: Always
        securityContext:
          runAsUser: 0
          privileged: true
        ports:
          - name: http
            containerPort: 8080
        volumeMounts:
        - name: log-path
          mountPath: /var/log
        - name: springapp-keyvault-secret-store
          mountPath: "/thanhnc85/thanhkeyvault"
      volumes:
      - name: log-path
        hostPath:
          path: /var/log/thanhnc85
          type: DirectoryOrCreate
      - name: springapp-keyvault-secret-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-thanhkeyvault-secret-provider
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: springapp-svc-green
  labels:
    app: springapp-green
  namespace: thanhnc85
spec:
  type: ClusterIP
  selector:
    app: springapp-green
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
---
# apiVersion: monitoring.coreos.com/v1
# kind: ServiceMonitor
# metadata:
#   labels:
#     app: springapp
#   name: springapp-svc-monitor
#   namespace: thanhnc85
# spec:
#   endpoints:
#     - interval: 15s
#       port: http
#       path: /actuator/prometheus
#       scheme: http
#   selector:
#     matchLabels:
#       app: springapp
