k8s/ingress-springapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "test.troynguyen.online"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springapp-svc
            port:
              number: 8080
  - host: "www.troynguyen.online"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springapp-svc-green
            port:
              number: 8080
